@@ -239,7 +239,7 @@ graphics_info_t::superpose_with_atom_selection(atom_selection_container_t asc_re
 	    if (move_copy_of_imol2_flag) { 
 	       mol2 = new CMMDBManager;
 	       mol2->Copy(asc_mov.mol, MMDBFCM_All);
-	       std::string name = "Copy of ";
+	       std::string name = "Copy_of_";
 	       name += moving_mol_name;
 	       int imol2_new = graphics_info_t::create_molecule();
 	       graphics_info_t::molecules[imol2_new].install_model(imol2_new, make_asc(mol2), name, 1);
